fix(frontend): solve whitespace of home view

--- a/frontend/src/app/pages/home/home.css
+++ b/frontend/src/app/pages/home/home.css
@@ -28,12 +28,48 @@
 }
 
 .fila-peliculas2 {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(140px, 1fr));
-  gap: 16px;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 16px;
 }
 
-.fila-peliculas2 .netflix-card:hover {
-  transform: scale(1.08);
-  transition: transform 0.2s ease ;
+.fila-peliculas2 .netflix-card {
+    width: 100% !important; 
+    height: 100%;
+    transition: transform 0.2s ease;
+}
+
+@media (hover: hover) {
+    .fila-peliculas2 .netflix-card:hover {
+        transform: scale(1.05);
+        z-index: 10;
+    }
+}
+
+@media (max-width: 575px) {
+    .fila-peliculas2 {
+        grid-template-columns: repeat(3, 1fr);
+        gap: 8px;
+    }
+}
+
+@media (min-width: 576px) {
+    .fila-peliculas2 {
+        grid-template-columns: repeat(4, 1fr); 
+        gap: 16px;
+    }
+}
+
+@media (min-width: 924px) {
+    .fila-peliculas2 {
+        grid-template-columns: repeat(5, 1fr);
+        gap: 16px;
+    }
+}
+
+@media (min-width: 1168px) {
+    .fila-peliculas2 {
+        grid-template-columns: repeat(6, 1fr); 
+        gap: 20px;
+    }
 }
